Began layout for detail cards; fixed spacing in hi/low temp

--- a/src/components/main-page/main.module.css
+++ b/src/components/main-page/main.module.css
@@ -87,6 +87,26 @@
     height: 200px;
 }
 
+.detailCard {
+    
+}
+
+#detailHumid {
+
+}
+
+#detailAQ {
+
+}
+
+#detailUV {
+
+}
+
+#detailPrecip {
+
+}
+
 .hourlyForecast {
     width: 300px;
 }
